--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
   "name": "react-mqls",
-  "version": "0.1.11",
+  "version": "1.0.0",
   "description": "Javascript media query match for React.js",
-  "main": "index.js",
+  "main": "dist/react-mqls.min.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "clean": "webpack -p --config webpack.prod.config.js --clean",
-    "build": "webpack -p --config webpack.prod.config.js",
+    "clean": "webpack -p --config webpack.prod.js --clean",
+    "build": "npm run tsc && npm run build:lib",
+    "build:lib": "webpack -p --config webpack.prod.js",
     "start": "npm install && npm run start:dev",
-    "start:dev": "webpack-dev-server --config webpack.dev.config.js --inline"
+    "start:dev": "webpack-dev-server --config webpack.dev.js --inline",
+    "tsc": "tsc",
+    "deploy": "npm install && npm run build && npm publish"
   },
   "repository": {
     "type": "git",
@@ -31,43 +34,53 @@
   },
   "homepage": "https://github.com/salgum1114/react-mqls#readme",
   "dependencies": {
-    "prop-types": "^15.6.1",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
+    "prop-types": "^15.7.2",
+    "react": "^16.12.0",
+    "react-design-editor": "0.0.4",
+    "react-dom": "^16.12.0",
     "react-dom-factories": "^1.0.2",
-    "react-hot-loader": "3.1.3"
+    "react-hot-loader": "4.12.17"
   },
   "devDependencies": {
-    "@babel/core": "^7.1.6",
-    "@babel/plugin-proposal-class-properties": "^7.0.0",
-    "@babel/plugin-proposal-decorators": "^7.1.6",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
-    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/core": "^7.7.2",
+    "@babel/plugin-proposal-class-properties": "^7.7.0",
+    "@babel/plugin-proposal-decorators": "^7.7.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-transform-runtime": "^7.1.0",
-    "@babel/polyfill": "^7.0.0",
-    "@babel/preset-env": "^7.1.6",
-    "@babel/preset-react": "^7.0.0",
-    "antd-theme-webpack-plugin": "^1.1.9",
-    "babel-eslint": "^9.0.0",
-    "babel-loader": "^8.0.0",
-    "babel-plugin-dynamic-import-webpack": "^1.0.2",
-    "babel-plugin-import": "^1.11.0",
+    "@babel/polyfill": "^7.7.0",
+    "@babel/preset-env": "^7.7.1",
+    "@babel/preset-react": "^7.7.0",
+    "@babel/preset-typescript": "^7.7.2",
+    "@types/react": "^16.9.11",
+    "@types/react-dom": "^16.9.4",
+    "antd-theme-webpack-plugin": "^1.3.0",
+    "babel-eslint": "^10.0.3",
+    "babel-loader": "^8.0.6",
+    "babel-plugin-dynamic-import-webpack": "^1.1.0",
+    "babel-plugin-import": "^1.12.2",
     "clean-webpack-plugin": "^0.1.19",
-    "eslint": "^5.9.0",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-loader": "^1.9.0",
-    "eslint-plugin-import": "^2.11.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.7.0",
+    "css-loader": "^3.2.0",
+    "eslint": "^6.6.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-loader": "^3.0.2",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.16.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "html-webpack-plugin": "^3.2.0",
+    "less": "^3.10.3",
+    "less-loader": "^5.0.0",
     "path": "^0.12.7",
     "redux-devtools-extension": "^2.13.7",
+    "style-loader": "^1.0.0",
+    "tslint": "^5.20.1",
+    "typescript": "^3.7.2",
     "uglifyjs-webpack-plugin": "^1.2.5",
-    "webpack": "^4.25.1",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.4",
-    "webpack-merge": "^4.1.2"
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.9.0",
+    "webpack-merge": "^4.2.2"
   },
-  "types": "react-mqls.d.ts"
+  "types": "lib/index.d.ts"
 }
